evol(Spring): ajour des endpoints pour Classes
