# back/fitmarket/src/main/resources/swagger/fitmarketapi.yml
@@ -119,14 +119,6 @@ components:
           type: string
           x-stoplight:
             id: jzgbnuypucaoo
-        orders:
-          x-stoplight:
-            id: n2gs19q84uzu2
-          type: array
-          items:
-            $ref: '#/components/schemas/Order'
-            x-stoplight:
-              id: 0kkdly561v34e
     Classes:
       title: Classes
       x-stoplight:
@@ -141,10 +133,6 @@ components:
           $ref: '#/components/schemas/Product'
           x-stoplight:
             id: dhukmpf9iwoxw
-        name:
-          type: string
-          x-stoplight:
-            id: 7w58sgc0lmumf
         video:
           type: string
           x-stoplight:
@@ -226,4 +214,3 @@ components:
           type: string
         description:
           type: string
-
